set up alphaadvantage api

--- a/src/components/StockDetails.css
+++ b/src/components/StockDetails.css
@@ -5,6 +5,10 @@
   color: #d7ceb2;
 }
 
+.StockDetails h2 {
+  font-size: 1.7em;
+}
+
 .StockDetails .individual-stock-table {
   text-align: center;
 }
