--- a/src/components/StockDetails.css
+++ b/src/components/StockDetails.css
@@ -3,10 +3,37 @@
   flex-direction: column;
   align-items: center;
   color: #d7ceb2;
+  margin: 20px;
 }
 
 .StockDetails h2 {
   font-size: 1.7em;
+}
+
+.StockDetails .button-container {
+  margin: 20px 0;
+  display: flex;
+}
+
+.StockDetails .button-container button {
+  font-family: "Lato", sans-serif;
+  font-size: 12px;
+  background-color: #d8d4d5;
+  border: 1px solid #d8d4d5;
+  border-radius: 5px;
+  position: relative;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.StockDetails .button-container button:hover {
+  cursor: pointer;
+  background-color: #bbb4b6;
+}
+
+.StockDetails .button-container button:active {
+  top: 1px;
 }
 
 .StockDetails .individual-stock-table {
@@ -21,4 +48,16 @@
 .StockDetails .individual-stock-table td {
   background-color: #a59e8c;
   padding: 0.5em;
+}
+
+.StockDetails .AddCloseOptionsForm {
+  display: none;
+}
+
+.StockDetails .StockOpenOptionsTable {
+  display: none;
+}
+
+.StockDetails .DividendTable {
+  display: none;
 }
