--- a/src/components/StockDetails.css
+++ b/src/components/StockDetails.css
@@ -11,7 +11,7 @@
 }
 
 .StockDetails .button-container {
-  margin: 20px 0;
+  margin-top: 20px;
   display: flex;
 }
 
@@ -38,24 +38,18 @@
 
 .StockDetails .individual-stock-table {
   text-align: center;
+  margin-top: 20px;
 }
 
 .StockDetails .individual-stock-table th {
   background-color: #66635b;
-  padding: 0.5em;
+  padding: 3px 10px;
+  width: 25%;
 }
 
 .StockDetails .individual-stock-table td {
   background-color: #a59e8c;
-  padding: 0.5em;
-}
-
-.StockDetails .AddCloseOptionsForm {
-  display: none;
-}
-
-.StockDetails .StockOpenOptionsTable {
-  display: none;
+  padding: 10px;
 }
 
 .StockDetails .DividendTable {
